--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -5,10 +5,45 @@
 
 * {
   font-family: 'jaram';
+  font-weight: 900px;
+}
+
+/* header */
+
+header {
+  height: 120px;
 }
 
 .logo {
   height: 100px;
+  float: right;
+}
+
+.loginPageBtns {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.loginPageBtns > button {
+  width: 300px;
+  height: 80px;
+  margin: 20px 20px 20px 20px;
+  font-size: 40px;
+  background-color: black;
+  color: white;
+  border-radius: 15px;
+}
+.loginPageBtns > button:hover {
+  width: 300px;
+  height: 80px;
+  margin: 20px 20px 20px 20px;
+  font-size: 40px;
+  background-color: white;
+  color: black;
+  border-radius: 15px;
+  border: 3px solid black;
 }
 
 /* 모달 스타일 */
@@ -20,27 +55,115 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgb(0, 0, 0, 0.1);
 }
 
 .modal .modalContent {
   background-color: #fefefe;
   padding: 20px;
   border: 1px solid #888;
-  width: 50%;
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+  width: 30%;
+  box-shadow: 0px 4px 8px 0px rgb(0, 0, 0, 0.1);
   color: #000;
   height: 80%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center;
+  text-align: left;
 }
 
-.close {
+/* 공통영역 */
+
+label {
+  font-size: 30px;
+}
+
+/* 페이지 영역 */
+
+/* loginBox */
+
+.loginBoxBtns {
   float: right;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
+}
+.loginBoxBtns > button {
+  width: 60px;
+  height: 30px;
+  font-size: 20px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+}
+.loginBoxBtns > button:hover {
+  width: 60px;
+  height: 30px;
+  font-size: 20px;
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+}
+.loginBox > div {
+  margin: 20px 20px 20px 20px;
+}
+
+.loginBox > div > input {
+  width: 380px;
+  height: 30px;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* signupBox */
+
+.signupBox > div {
+  margin: 20px 20px 20px 20px;
+}
+
+.signupBox > div > input {
+  width: 330px;
+  height: 30px;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.signupBoxBtns {
+  float: right;
+}
+
+.signupBoxBtns > button {
+  width: 80px;
+  height: 30px;
+  font-size: 20px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+}
+.signupBoxBtns > button:hover {
+  width: 80px;
+  height: 30px;
+  font-size: 20px;
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+}
+
+.verified,
+.check {
+  width: 50px;
+  height: 30px;
+  font-size: 20px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+}
+
+.verified:hover,
+.check:hover {
+  width: 50px;
+  height: 30px;
+  font-size: 20px;
+  background-color: white;
+  color: black;
+  border-radius: 10px;
+  border: none;
 }
