feat: 헤더- 로그인, 로그아웃

--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -8,6 +8,23 @@
   font-weight: 900px;
 }
 
+/* header */
+
+header {
+  height: 120px;
+}
+
+.logo {
+  height: 100px;
+  float: right;
+}
+
+.headerBtns > button {
+  width: 80px;
+  height: 40px;
+  font-size: 20px;
+}
+
 /* footer */
 footer {
   margin-top: 200px;
