--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -47,3 +47,30 @@ footer {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* 모달 스타일 */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.1);
+}
+
+.modal .modalContent {
+  background-color: #fefefe;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+  box-shadow: 0px 4px 8px 0px rgb(0, 0, 0, 0.1);
+  color: #000;
+  height: 80%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+}
