--- a/src/public/css/posts.css
+++ b/src/public/css/posts.css
@@ -1,10 +1,13 @@
 @font-face {
-  font-family: 'blueroad';
-  src: url('http://localhost:8000/assets/ttf/Yeongdeok_Blueroad.ttf');
+  font-family: 'GangwonEdu_OTFBoldA';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
 
 * {
-  font-family: 'blueroad';
+  font-family: 'GangwonEdu_OTFBoldA';
   font-weight: 900px;
 }
 
