feat:상세 게시글 신고, 댓글 신고 댓글 작성, 댓글 수정, 댓글 삭제 기능 추가

--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -85,6 +85,10 @@
   background-color: yellow;
   color: black;
 }
+.report-button{
+  background-color: rgb(255, 145, 0);
+  color: rgb(255, 255, 255);
+}
 .post-content {
   width: 1200px;
   background-color: #ffffff;
@@ -186,11 +190,4 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-}
-
-.post-delete-button {
-  margin: -130px -160px 0 0;
-  position: relative;
-  padding: 20px;
-  float: right;
 }
