--- a/src/public/css/postlist.css
+++ b/src/public/css/postlist.css
@@ -11,14 +11,16 @@
   font-weight: 900px;
 }
 
+/* 모든 버튼 */
 button:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
   transition-duration: 0.1s;
   cursor: pointer;
 }
 
 /* header */
 header {
+  margin-top: 40px;
   height: 120px;
 }
 
@@ -26,6 +28,7 @@ header {
   height: 100px;
   float: right;
   cursor: pointer;
+  margin-right: 30px;
 }
 
 /* main */
