--- a/src/public/css/post.css
+++ b/src/public/css/post.css
@@ -1,3 +1,5 @@
+@import 'reset.css';
+
 @font-face {
   font-family: 'GangwonEdu_OTFBoldA';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff')
@@ -9,6 +11,26 @@
 * {
   font-family: 'GangwonEdu_OTFBoldA';
   font-weight: 900px;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .container {
+    width: 90%;
+  }
+
+  .post_buttons {
+    gap: 80%;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .container {
+    width: 870px;
+  }
+
+  .post_buttons {
+    gap: 710px;
+  }
 }
 
 /* 모든 버튼 */
@@ -40,17 +62,17 @@ header {
 /* main */
 main {
   text-align: center;
+  padding: 20px;
 }
 
 .container {
   font-size: 20px;
   margin: 0 auto;
   border: 1px solid;
-  padding: 19px 27px 30px;
+  padding: 15px;
   box-sizing: border-box;
   border-radius: 2px;
   text-align: left;
-  width: 870px;
   border-color: #efefef;
 }
 
@@ -95,7 +117,6 @@ main {
 
 .post_buttons {
   display: flex;
-  gap: 689px;
 }
 
 /* footer */
