--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -23,6 +23,33 @@
   cursor: pointer;
 }
 
+/* 모달 스타일 */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.1);
+}
+
+.modal .modalContent {
+  background-color: #fefefe;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%;
+  box-shadow: 0px 4px 8px 0px rgb(0, 0, 0, 0.1);
+  color: #000;
+  height: 55%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+  overflow: auto;
+}
 .post-box {
   width: 1400px;
   height: 600px;
@@ -85,7 +112,7 @@
   background-color: yellow;
   color: black;
 }
-.report-button{
+.report-button {
   background-color: rgb(255, 145, 0);
   color: rgb(255, 255, 255);
 }
