fix: 반응형 게시글 상세 페이지

--- a/src/public/css/headerButtons.css
+++ b/src/public/css/headerButtons.css
@@ -4,13 +4,16 @@ button:hover {
 }
 
 header button {
+  border: none;
+  border-radius: 5px;
   margin: 20px 0px 0px 20px;
   background-color: black;
   color: white;
-  padding: 5px 10px;
+  padding: 10px 10px;
   position: relative;
   left: 80px;
   cursor: pointer;
+  font-size: 18px;
 }
 
 .headerBtns {
