--- a/src/public/css/admin.css
+++ b/src/public/css/admin.css
@@ -17,6 +17,7 @@
   height: 50px;
   font-size: 50px;
   font-weight: bold;
+  margin-top: 20px;
 }
 
 .header::before {
@@ -71,4 +72,10 @@
   border-radius: 10px;
   padding: 5px 10px;
   cursor: pointer;
+}
+/* footer */
+footer {
+  margin-top: 200px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
