--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -6,23 +6,30 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'GangwonEdu_OTFBoldA';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff')
+    format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
-  font-family: 'jaemin';
+  font-family: 'GangwonEdu_OTFBoldA';
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-  height: 50px;
+  height: 150px;
 }
 
 .logo {
-  height: 130px;
+  height: 150px;
+  float: right;
   cursor: pointer;
 }
-
 /* 모달 스타일 */
 .modal {
   display: none;
@@ -38,11 +45,11 @@
 .modal .modalContent {
   background-color: #fefefe;
   padding: 20px;
-  border: 1px solid #888;
+  border-radius: 15px;
   width: 30%;
   box-shadow: 0px 4px 8px 0px rgb(0, 0, 0, 0.1);
   color: #000;
-  height: 55%;
+  height: 65%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -50,15 +57,8 @@
   text-align: left;
   overflow: auto;
 }
-.post-box {
-  width: 1400px;
-  height: 600px;
-  background-color: #ffffff;
-  margin: 20px auto;
-  border: 4px solid #000000; /* 테두리 추가 */
-  border-radius: 8px;
-  position: relative; /* 부모 요소로부터의 위치 설정을 위해 추가 */
-  padding: 20px; /* 내용과 버튼 간격을 위해 패딩 추가 */
+main {
+  padding: 0px 40px 40px 40px;
 }
 
 .post-info {
@@ -70,13 +70,14 @@
 .post-nickname,
 .post-view,
 .post-date {
-  font-size: 14px;
+  font-size: 20px;
 }
 
 .post-title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-top: 10px;
+  font-family: 'jaram';
+  font-size: 60px;
+  font-weight: 900;
+  margin: 10px 0px 10px 0px;
 }
 .post-view {
   display: inline-block;
@@ -116,31 +117,11 @@
   background-color: rgb(255, 145, 0);
   color: rgb(255, 255, 255);
 }
-.post-content {
-  width: 1200px;
-  background-color: #ffffff;
-  margin: 20px auto;
-  padding: 20px;
-  border: 4px solid #000000;
-  border-radius: 8px;
-  font-size: 16px;
-}
-
-.comment-box {
-  width: 1400px;
-  height: 600px;
-  background-color: #ffffff;
-  margin: 100px auto 20px auto;
-  border: 4px solid #000000; /* 테두리 추가 */
-  border-radius: 8px;
-  position: relative;
-  padding: 20px;
-}
 
 .comment-input {
-  width: 1280px;
+  width: 92%;
   padding: 10px;
-  margin-bottom: 10px;
+  margin: 10px 0px 10px 0px;
   border: 4px solid #000000;
   border-radius: 8px;
 }
@@ -164,7 +145,8 @@
 
 .comment-content {
   padding: 10px;
-  background-color: #ffffff;
+  background-color: black;
+  color: white;
   border: 4px solid #000000;
   border-radius: 8px;
   font-size: 14px;
@@ -217,4 +199,49 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.comment-box {
+  border-top: solid 2px black;
+  margin-top: 100px;
+  padding-top: 10px;
+}
+
+/* footer */
+footer {
+  margin-top: 200px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.post_title,
+.post_annualCategory,
+.post_content,
+.post_img {
+  width: 100%;
+  margin: 13px 13px 13px 0px;
+}
+
+.post_content {
+  height: 150px;
+}
+.report_content {
+  width: 100%;
+  margin: 13px 13px 13px 0px;
+}
+
+.modalContent > div > button {
+  border-radius: 5px;
+  border: none;
+  background-color: black;
+  color: white;
+  padding: 5px 5px 5px 5px;
+}
+
+.modalContent > div > div > button {
+  border-radius: 5px;
+  border: none;
+  background-color: black;
+  color: white;
+  padding: 5px 5px 5px 5px;
 }
