--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -85,6 +85,10 @@ label {
   justify-content: center;
   align-items: center;
 }
+.kakaoLogin {
+  width: 300px;
+  margin: 20px 20px 20px 20px;
+}
 
 .loginPageBtns > button {
   width: 300px;
