--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -30,9 +30,14 @@ header {
   height: 120px;
 }
 
+button {
+  cursor: pointer;
+}
+
 .logo {
   height: 100px;
   float: right;
+  cursor: pointer;
 }
 
 /* footer */
