--- a/src/public/css/post.css
+++ b/src/public/css/post.css
@@ -13,63 +13,108 @@
   font-weight: 900px;
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  .container {
-    width: 90%;
+/* 태블릿 크기 */
+@media screen and (min-width: 769px) {
+  header {
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
-  .post_buttons {
-    gap: 80%;
+  .container {
+    padding: 0px 60px !important;
+  }
+
+  .chatbox {
+    bottom: 3rem !important;
+    right: 3rem !important;
   }
 }
 
+/* PC 크기 */
 @media screen and (min-width: 1025px) {
   .container {
-    width: 870px;
-  }
-
-  .post_buttons {
-    gap: 710px;
+    padding: 0px 60px !important;
   }
 }
 
-/* 모든 버튼 */
-button {
-  background-color: black;
-  color: white;
-  padding: 5px 10px;
-  cursor: pointer;
+article {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  max-width: 1024px;
+  position: relative;
 }
 
-button:hover {
-  transform: scale(1.1);
-  transition-duration: 0.1s;
-}
-
-/* header */
 header {
-  margin-top: 40px;
-  height: 120px;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 1rem;
+  height: 245px;
+}
+
+.logoCon {
+  display: flex;
 }
 
 .logo {
-  height: 100px;
-  float: right;
+  object-fit: contain;
+  height: 120px;
+  width: 120px;
   cursor: pointer;
-  margin-right: 30px;
+}
+
+.navControl {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.navCon {
+  display: flex;
+  font-size: large;
+  font-weight: 700;
+  gap: 1rem;
+  flex-grow: 1;
+  align-items: end;
+}
+
+.logo:hover,
+button:hover,
+.navCon li:hover {
+  transform: scale(1.1);
+  transition-duration: 0.1s;
+  cursor: pointer;
+}
+
+.headerBtns {
+  display: flex;
+  flex-direction: row;
+}
+
+button {
+  box-shadow: 2px 2px rgb(195, 195, 195);
+  border: none;
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  padding: 10px 10px;
+  cursor: pointer;
+  font-size: 18px;
+  margin: 5px 5px;
 }
 
 /* main */
+
 main {
   text-align: center;
-  padding: 20px;
 }
 
 .container {
   font-size: 20px;
-  margin: 0 auto;
-  border: 1px solid;
-  padding: 15px;
+  padding: 0px;
   box-sizing: border-box;
   border-radius: 2px;
   text-align: left;
@@ -95,7 +140,8 @@ main {
 
 .write_box > input {
   height: 30px;
-  font-size: 20px;
+  font-size: 15px;
+  font-family: 'GangwonEdu_OTFBoldA';
 }
 
 .post_title::placeholder {
@@ -115,13 +161,10 @@ main {
   font-size: 20px;
 }
 
-.post_buttons {
-  display: flex;
-}
-
 /* footer */
 footer {
-  margin-top: 200px;
+  padding-top: 200px;
+  padding-bottom: 100px;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'GangwonEdu_OTFBoldA';
 }
