--- a/src/public/css/post.css
+++ b/src/public/css/post.css
@@ -20,13 +20,17 @@
     padding-right: 3rem;
   }
 
-  .container {
-    padding: 0px 60px !important;
+  article {
+    padding-left: 5.1rem !important;
+    padding-right: 5.1rem !important;
   }
 
   .chatbox {
     bottom: 3rem !important;
     right: 3rem !important;
+  }
+  .container {
+    padding: 0px 60px !important;
   }
 }
 
@@ -50,7 +54,6 @@ article {
 header {
   display: flex;
   justify-content: space-between;
-  padding-top: 1rem;
   height: 245px;
 }
 
