--- a/src/public/css/postlist.css
+++ b/src/public/css/postlist.css
@@ -47,7 +47,7 @@
   }
 
   .box_button {
-    margin-right: 80px;
+    margin-right: 100px;
   }
 
   .thread_btn {
@@ -62,6 +62,22 @@ button:hover {
   cursor: pointer;
 }
 
+body {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+article {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  max-width: 1024px;
+  position: relative;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -74,14 +90,56 @@ header {
 }
 
 .logo {
-  height: 210px;
-  float: right;
+  object-fit: contain;
+  height: 120px;
+  width: 120px;
   cursor: pointer;
-  margin-right: 90px;
 }
 
-.write {
-  margin-top: 50px;
+.navControl {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.navCon {
+  display: flex;
+  font-size: large;
+  font-weight: 700;
+  gap: 1rem;
+  flex-grow: 1;
+  align-items: end;
+}
+
+.navCon li {
+  text-shadow: 1.5px 1.5px rgb(220, 218, 218);
+  font-family: 'GangwonEdu_OTFBoldA';
+}
+
+.logo:hover,
+button:hover,
+.navCon li:hover {
+  transform: scale(1.1);
+  transition-duration: 0.1s;
+  cursor: pointer;
+}
+
+.headerBtns {
+  display: flex;
+  flex-direction: row;
+}
+
+header button {
+  box-shadow: 2px 2px rgb(195, 195, 195);
+  border: none;
+  border-radius: 5px;
+  background-color: black;
+  color: white;
+  padding: 10px 10px;
+  cursor: pointer;
+  font-size: 18px;
+  margin: 5px 5px;
 }
 
 /* main */
@@ -92,12 +150,13 @@ header {
 }
 
 /* 페이지네이션 버튼 */
-.pagination_createdat,
-.pagination_viewcount {
+.pagination,
+.pagination_createdat {
   text-align: center;
 }
 
-.pagination > button {
+.pagination > button,
+.pagination_createdat > button {
   box-shadow: 2px 2px rgb(195, 195, 195);
   margin: 20px 20px 0px 0px;
   background-color: black;
@@ -128,7 +187,6 @@ tr {
 td {
   padding: 10px;
   text-align: center;
-  font-size: 17px;
 }
 
 .postBox:hover {
@@ -147,10 +205,6 @@ td {
 .postBox > td:nth-child(3) {
   width: 120px;
   text-align: left;
-}
-
-.postBox > td:nth-child(4) {
-  width: 90px;
 }
 
 /* 연도별 카테고리 + 익명 스레드 버튼 */
@@ -195,4 +249,8 @@ footer {
   cursor: pointer;
   font-size: 20px;
   margin: 5px 5px;
+}
+
+.ordering {
+  color: rgb(103, 70, 0);
 }
