fix : 프로필 페이지 반응형

--- a/src/public/css/threads.css
+++ b/src/public/css/threads.css
@@ -206,7 +206,7 @@ footer {
 .writeThreadBox {
   display: flex;
   flex-direction: column;
-
+  text-align: right;
   padding: 20px;
 }
 .writeThread {
