--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -198,6 +198,7 @@ main {
 
 .bookmarkInnerBox {
   margin: 40px 40px 40px 0px;
+  text-align: left;
 }
 
 .title {
@@ -225,10 +226,4 @@ footer {
   padding-bottom: 100px;
   text-align: center;
   font-family: 'GangwonEdu_OTFBoldA';
-}
-
-.removeBookmark {
-  background-color: white;
-  color: black;
-  border: 1px solid black;
 }
