--- a/src/public/css/chat.css
+++ b/src/public/css/chat.css
@@ -1,16 +1,17 @@
-@font-face {
-  font-family: 'GangwonEdu_OTFBoldA';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEdu_OTFBoldA.woff')
-    format('woff');
-  font-weight: normal;
-  font-style: normal;
+img {
+  width: 100%;
+  height: auto;
+}
+h1 {
+  font-size: 28px;
+  font-weight: 900;
 }
 
 body {
-  font-family: 'GangwonEdu_OTFBoldA';
+  font-family: 'poppins';
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  background-color: #f9f9f9;
 }
 #nickname {
   float: right;
@@ -19,21 +20,19 @@ body {
   margin-top: 5px;
 }
 
-.chat-container {
-  max-width: 600px;
+#chat-container {
+  max-width: 1080px;
   margin: 0 auto;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
   padding: 20px;
   box-sizing: border-box;
   margin-top: 20px;
   display: flex;
   flex-direction: column;
-  height: 80vh;
+  height: 90vh;
 }
 
-.chat-messages {
+#chat-messages {
   flex-grow: 1;
   overflow-y: scroll;
   padding: 10px;
@@ -48,16 +47,18 @@ body {
 
 /* 왼쪽 정렬 */
 .chat-message.left-align {
-  background-color: rgb(137, 90, 1);
-  color: white;
+  background-color: #d5d5d5;
+  color: #323232;
   float: left;
   clear: both;
+  box-shadow: 2px 2px 2px #d5d5d5;
 }
 
 /* 오른쪽 정렬 */
 .chat-message.right-align {
-  background-color: rgb(62, 46, 1);
-  color: white;
+  background-color: #ffffff;
+  box-shadow: 2px 2px 2px #d5d5d5;
+  color: #323232;
   float: right;
   clear: both;
 }
@@ -67,23 +68,22 @@ body {
   font-weight: bold;
 }
 
-.chat-input {
+#chat-input {
   display: flex;
   align-items: center;
 }
 
-.chat-input input[type='text'] {
+#chat-input input[type='text'] {
   flex-grow: 1;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   margin-right: 10px;
-  outline: #694a07;
 }
 
-.chat-input button {
+#chat-input button {
   padding: 10px 20px;
-  background-color: #694a07;
+  background-color: #323232;
   color: #fff;
   border: none;
   border-radius: 5px;
