--- a/src/public/jsx/components/mypage/mypage.css
+++ b/src/public/jsx/components/mypage/mypage.css
@@ -49,8 +49,8 @@
 
 .myinfo_sign {
   display: flex;
-  width: Fill (300px);
-  height: Hug (32px);
+  width: 300px;
+  height: 32px;
   justify-content: space-between;
 }
 
@@ -67,9 +67,9 @@
 }
 
 .myinfo_signmenu {
-  width: Hug (84.18px);
-  height: Hug (32px);
-  padding: 8px, 16px, 8px, 16px;
+  width: 84.18px;
+  height: 32px;
+  padding: 8px, 16px;
   border-radius: 999px;
   gap: 4px;
   background-color: #323232;
