--- a/src/public/jsx/components/mypage/myinfo.css
+++ b/src/public/jsx/components/mypage/myinfo.css
@@ -1,7 +1,7 @@
 .nicknamebox {
   justify-content: space-between;
   display: flex;
-  height: 100px;
+  height: 80px;
 }
 
 .myinfo_first {
@@ -28,6 +28,16 @@
   color: #979797;
 }
 
+.nickname {
+  outline: none;
+  border-bottom: 1px solid #000;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  width: 200px;
+  height: 50px;
+}
+
 .myinfo_edit {
   width: 38px;
   height: 30px;
@@ -40,6 +50,11 @@
   color: #427dee;
   background: none;
   inline-size: none;
+  cursor: pointer;
+}
+
+.myinfo_edit:hover {
+  color: #000;
 }
 
 .myinfo_mynickname {
@@ -99,4 +114,5 @@
   font-weight: 400;
   line-height: 30px;
   letter-spacing: 0.02em;
+  cursor: pointer;
 }
