fix : 헤더 ul -> li 수정, mypage 수정 모달완성

--- a/src/public/jsx/components/main/header.css
+++ b/src/public/jsx/components/main/header.css
@@ -34,4 +34,10 @@
   line-height: 24px;
   letter-spacing: 0em;
   text-align: left;
+  margin-left: 50px;
+  cursor: pointer;
+}
+
+.logout {
+  color: red !important;
 }
