--- a/src/public/jsx/components/mypage/myinfo.css
+++ b/src/public/jsx/components/mypage/myinfo.css
@@ -9,11 +9,13 @@
   border-radius: 36px;
   border: 1px;
   width: 364px;
-  height: 288px;
+  height: auto;
   padding: 32px;
   gap: 24px;
   margin-left: 30px;
   border: 1px solid #d2d2d2;
+  align-items: center; /* 추가 */
+  justify-content: center; /* 추가 */
 }
 
 .myinfo_nickname {
@@ -115,4 +117,101 @@
   line-height: 30px;
   letter-spacing: 0.02em;
   cursor: pointer;
+}
+
+.myinfo_login {
+  text-align: center;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  color: #979797;
+}
+
+.myinfo_first img {
+  width: 80px;
+  height: 112px;
+  margin-left: 140px;
+}
+
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal h2 {
+  height: 30px;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #323232;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 48px;
+  border-radius: 36px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border: 1px solid #d2d2d2;
+  width: 632px;
+  height: 240px;
+  gap: 24px;
+}
+
+.modal-content input {
+  width: 580px;
+  height: 36px;
+  border-radius: 12px;
+  border: 1px solid #d2d2d2;
+  padding: 24px;
+  gap: 4px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: #979797;
+}
+
+.editBtn {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.editBtn p {
+  width: 38px;
+  height: 30px;
+  font-family: Poppins;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  margin-left: 60px;
+  margin-top: 50px;
+  cursor: pointer;
+}
+
+.characterCount {
+  width: 625px;
+  height: 25px;
+  padding: 4px, 8px, 0px, 0px;
+  gap: 4px;
+  text-align: end;
+}
+
+.close {
+  color: #ff6e4e;
 }
